--- a/Trading Signals_Project.ipynb
+++ b/Trading Signals_Project.ipynb
@@ -83,9 +83,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "key = 'yzrsy3YyWv5YlmuVm5C5q551PyYm5Mob8LUME7GeKtvwuekNgIv1C6LYr5vJSql6'\n",
+    "key = ''\n",
     "\n",
-    "rsa ='aVxK2FOeiA6XDXNeyGnZlVZu3RkdcYjWdv0OQd6NE6Dy8VZ4qATDopDeFRrEAQ0c'"
+    "rsa =''"
    ]
   },
   {
